# autorujira-contracts

./: .gitignore  README.md  tcy-autocompounder-guide.md
autoclaimer-v1/: Cargo.toml
autoclaimer-v1/src/: contract.rs  error.rs  lib.rs  mocks.rs  msg.rs  state.rs  tests.rs
autosltp-v1/: Cargo.toml
autosltp-v1/src/: contract.rs  lib.rs  msg.rs  state.rs
common/: Cargo.toml
common/src/: claim.rs  common_functions.rs  lib.rs  send.rs  stake.rs  staking_provider.rs
