[package]
name = "sltp"
version = "1.0.0"
authors = ["AutoRujira <marcos@wbi.dev>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  -v "$(pwd)/../common":/common \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/optimizer-arm64:0.16.1
"""

[dependencies]
common = { path = "../common" }
anybuf = "0.5"
cosmwasm-schema = "2.1.0"
cosmwasm-std = { version = "2.1.0", features = ["cosmwasm_2_0"] }
cw-utils = "2.0.0"
cw-storage-plus = "2.0.0"
cw2 = "2.0.0"
schemars = "0.8.16"
serde = { version = "1.0.197", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.58" }
serde_json = "1.0.82"
hex = "0.4"
rujira-rs = { version = "0.0.1", git = "https://gitlab.com/thorchain/rujira.git", branch = "main" }

[dev-dependencies]
cw-multi-test = "0.18.1"
# kujira-rs-testing = { version = "1.7.0", git = "https://github.com/Team-Kujira/kujira-rs.git", branch = "master" }
